--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
     <title>Telegram Bot Messenger</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.4",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/"
   }
 }
 </script>
-</head>
+    <!-- 엔트리 포인트 명시적 로드 -->
+    <script type="module" src="./index.tsx"></script>
+  </head>
   <body class="bg-gray-100 h-screen overflow-hidden">
     <div id="root" class="h-full"></div>
   </body>
